# aide-mcp

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  STATUS.md
.claude/: settings.json
.claude/agents/: dogfood-aide.md  dogfood-vanilla.md
.claude/skills/dogfood/: INDEX.md  SKILL.md
.github/workflows/: ci.yml  release.yml
crates/aide-core/: Cargo.toml
crates/aide-core/src/: config.rs  lib.rs  paths.rs
crates/aide-dap/: Cargo.toml
crates/aide-dap/src/: client.rs  lib.rs
crates/aide-git/: Cargo.toml
crates/aide-git/src/: blame.rs  diff.rs  export.rs  lib.rs  log.rs  status.rs
crates/aide-github/: Cargo.toml
crates/aide-github/src/: auth.rs  client.rs  lib.rs  repo.rs  ux_gotcha.rs
crates/aide-indexer/: Cargo.toml
crates/aide-indexer/src/: main.rs  server.rs  state.rs  worker.rs
crates/aide-install/: Cargo.toml
crates/aide-install/src/: install.rs  lib.rs  manifest.rs  spec.rs  target.rs
crates/aide-lang/: Cargo.toml
crates/aide-lang/src/: lib.rs  plugin.rs  registry.rs
crates/aide-lang/src/languages/: cpp.rs  go.rs  java.rs  java_gradle.rs  mod.rs  node.rs  python.rs  rust.rs
crates/aide-lsp/: Cargo.toml
crates/aide-lsp/src/: client.rs  framing.rs  lib.rs  ops.rs  pool.rs
crates/aide-mcp/: Cargo.toml
crates/aide-mcp/src/: dogfood.rs  exec.rs  hook.rs  indexer.rs  jobs.rs  main.rs  processes.rs  server.rs
crates/aide-mcp/src/indexer/: mod.rs  state.rs  worker.rs
crates/aide-proto/: Cargo.toml
crates/aide-proto/src/: diagnostic.rs  framing.rs  ipc.rs  lib.rs  socket.rs
crates/aide-scip/: Cargo.toml
crates/aide-scip/src/: lib.rs
crates/aide-search/: Cargo.toml
crates/aide-search/src/: grep.rs  lib.rs  ls.rs  scope.rs
docs/: TOOLS.md
dogfood/: INDEX.md  TEMPLATE.md
dogfood/runs/: 001-nodejs-plugin-plan.md  002-nodejs-plugin-plan.md  003-aidepaths-blast-radius.md
