[workspace]
resolver = "2"
members = [
    "crates/aide-core",
    "crates/aide-install",
    "crates/aide-lang",
    "crates/aide-lsp",
    "crates/aide-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Jiri Vysoky <jiri.vysoky@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/vysokyj/aide-mcp"

[workspace.dependencies]
aide-core = { path = "crates/aide-core" }
aide-install = { path = "crates/aide-install" }
aide-lang = { path = "crates/aide-lang" }
aide-lsp = { path = "crates/aide-lsp" }

anyhow = "1"
flate2 = "1"
futures = "0.3"
lsp-types = "0.97"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rmcp = { version = "1.5", features = ["server", "macros", "transport-io"] }
tempfile = "3"
url = "2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
