[workspace]
resolver = "2"
members = [
    "crates/aide-core",
    "crates/aide-dap",
    "crates/aide-git",
    "crates/aide-github",
    "crates/aide-install",
    "crates/aide-lang",
    "crates/aide-lsp",
    "crates/aide-mcp",
    "crates/aide-proto",
    "crates/aide-scip",
    "crates/aide-search",
]

[workspace.package]
version = "0.6.1"
edition = "2021"
authors = ["Jiri Vysoky <jiri.vysoky@gmail.com>"]
license = "MIT"
repository = "https://github.com/vysokyj/aide-mcp"

[workspace.dependencies]
aide-core = { path = "crates/aide-core" }
aide-dap = { path = "crates/aide-dap" }
aide-git = { path = "crates/aide-git" }
aide-github = { path = "crates/aide-github" }
aide-install = { path = "crates/aide-install" }
aide-lang = { path = "crates/aide-lang" }
aide-lsp = { path = "crates/aide-lsp" }
aide-proto = { path = "crates/aide-proto" }
aide-scip = { path = "crates/aide-scip" }
aide-search = { path = "crates/aide-search" }

anyhow = "1"
flate2 = "1"
futures = "0.3"
git2 = { version = "0.20", default-features = false }
lsp-types = "0.97"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rmcp = { version = "1.5", features = ["server", "macros", "transport-io"] }
scip = "0.5"
protobuf = "3"
tar = "0.4"
tempfile = "3"
toml = "0.8"
url = "2"
zip = { version = "4", default-features = false, features = ["deflate"] }
ignore = "0.4"
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
globset = "0.4"
wiremock = "0.6"
nix = { version = "0.29", default-features = false, features = ["signal"] }
sysinfo = { version = "0.33", default-features = false, features = ["system", "user"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
