[package]
name = "aide-dap"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aide-proto.workspace = true
anyhow.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tracing.workspace = true

[lints]
workspace = true
