[package]
name = "aide-git"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
git2.workspace = true
serde = { workspace = true }
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
