[package]
name = "aide-indexer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "aide-indexer"
path = "src/main.rs"

[dependencies]
aide-core.workspace = true
aide-lang.workspace = true
aide-proto.workspace = true
anyhow.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
