[package]
name = "aide-install"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aide-core.workspace = true

anyhow.workspace = true
flate2.workspace = true
futures.workspace = true
reqwest = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
