[package]
name = "aide-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "aide-mcp"
path = "src/main.rs"

[dependencies]
aide-core.workspace = true
aide-lang.workspace = true

anyhow.workspace = true
rmcp = { workspace = true }
schemars.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
