[package]
name = "aide-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "aide-mcp"
path = "src/main.rs"

[dependencies]
aide-core.workspace = true
aide-dap.workspace = true
aide-git.workspace = true
aide-github.workspace = true
aide-install.workspace = true
aide-lang.workspace = true
aide-lsp.workspace = true
aide-proto.workspace = true
aide-scip.workspace = true
aide-search.workspace = true

anyhow.workspace = true
lsp-types.workspace = true
nix.workspace = true
rmcp = { workspace = true }
sysinfo.workspace = true
schemars.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
