[package]
name = "aide-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
thiserror.workspace = true
tokio = { workspace = true }

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
