[package]
name = "aide-scip"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
protobuf.workspace = true
scip.workspace = true
serde = { workspace = true }
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
