[package]
name = "aide-search"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aide-git.workspace = true
git2.workspace = true
globset.workspace = true
grep-matcher.workspace = true
grep-regex.workspace = true
grep-searcher.workspace = true
ignore.workspace = true
serde = { workspace = true }
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
